# axiom-core-deployment

./: .env.example  .gitignore  .vercelignore  AXIOM_PAYMENT_ARCHITECTURE_PLAN.md  BACKEND_INFRASTRUCTURE_AUDIT_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_ENVIRONMENT_GUIDE.md  DIGITAL_SOUL_PROTOCOL_ARCHITECTURE.md  ENHANCED_DIGITAL_SOUL_PROTOCOL_RESEARCH_ARCHITECTURE.md  FINAL_ARCHITECTURAL_GAPS.md  FINAL_SYSTEM_STATUS.md  IMPLEMENTATION_SUMMARY.md  NEURO_LINK_PROTOCOL.md  PAYMENT_FULFILLMENT_IMPLEMENTATION_PLAN.md  PRESS_KIT.md  README-OPAL-INTEGRATION.md  README.md  TESTING_FRAMEWORK_DOCUMENTATION.md  USER_ONBOARDING.md  create-test-blueprints.js  deploy.sh  jest.config.js  jest.config.webhook.js  jest.setup.js  local.db  next.config.js  package-lock.json  package.json  package.json.backup  responsive-design-verification-report.md  responsive-test-report.json  responsive-test-script.js  simulate_amadeus.py  tailwind.config.ts  test-ai-engine-enhancements.js  test-ai-engine-simple.js  test-ai-engine.js  test-genesis-api.js  test-integration.js  test-user-flows.js  (+7 more)
docs/: END_USER_RUNBOOK.md  ERROR_HANDLING_BEST_PRACTICES.md  ERROR_HANDLING_GUIDE.md  ERROR_HANDLING_PERFORMANCE_ANALYSIS.md  ERROR_HANDLING_READINESS_ASSESSMENT.md  ERROR_HANDLING_TEST_COVERAGE.md  ERROR_HANDLING_TROUBLESHOOTING.md  ERROR_RECOVERY_MECHANISMS.md  INFRA_SUMMARY.md  NEURAL_WORKSPACE_API_REFERENCE.md  NEURAL_WORKSPACE_GUIDE.md  (+4 more)
src/infra/solana/programs/axiom-staking/programs/axiom-staking/: Cargo.toml
src/infra/solana/programs/axiom-staking/programs/axiom-staking/src/: lib.rs
(+474 files in other folders)
