[package]
name = "axiom-staking"
version = "0.1.0"
description = "AXIOM Staking Program for Agent Deployment"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "axiom_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[dev-dependencies]